Refactored the UserService and its tests to use the updated security service